--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background: #101010;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -117,12 +117,15 @@ fieldset {
 fieldset small {
     align-self: flex-start;
 }
+fieldset a {
+    color: inherit;
+    text-decoration: none;
+}
 
 legend {
     padding: 0.2em 0.5em;
     font-size: 2rem
 }
-
 
 .container {
     display: flex;
@@ -174,7 +177,6 @@ legend {
     background-color: #1a1a1a;
     color: #ffffff;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
 }
 
 .header h1 {
@@ -185,13 +187,11 @@ legend {
 .header p {
     margin: 0;
     font-size: 1.2rem;
-    font-family: 'Roboto', sans-serif;
 }
 
 .footer p {
     margin: 0;
     font-size: 1rem;
-    font-family: 'Roboto', sans-serif;
     opacity: 0.7;
 }
 
@@ -215,4 +215,51 @@ legend {
 .main-nav a.nav-link {
     color: #ffffff;
     text-decoration: none;
+}
+
+#updates-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 0;
+    margin: 1rem 0;
+    list-style: none;
+}
+
+.update-card {
+    flex: 1 1 calc(50% - 0.5rem);
+    background: #222;
+    padding: 1rem;
+    border: 1px solid #444;
+    border-radius: 6px;
+    box-sizing: border-box;
+    min-width: 300px;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+}
+
+.update-date {
+    font-size: 1rem;
+    color: #ccc;
+    margin: 0 0 0.5rem 0;
+}
+
+.update-title {
+    font-size: 1.5rem;
+    color: #ff7f00;
+    margin: 0 0 0.5rem 0;
+    font-weight: 700;
+    text-align: center;
+}
+
+.update-description {
+    font-size: 1.7rem;
+    color: #fff;
+    margin: 0;
+}
+
+#all-updates-container h2{
+    margin: 2rem 0 0 0;
+    text-align: center;
 }
