--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .crt {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -106,7 +106,7 @@ fieldset {
     justify-content: center;
     align-items: center;
 
-    min-height: 300px; /* change this with media query later */
+    min-height: 300px;
     width: 700px;
 
     padding: 1rem;
@@ -217,17 +217,27 @@ legend {
     text-decoration: none;
 }
 
+#all-updates-container {
+    max-width: 1240px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 1rem;
+    box-sizing: border-box;
+    text-align: center;
+}
+
 #updates-list {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    justify-content: space-between;
     padding: 0;
     margin: 1rem 0;
     list-style: none;
 }
 
 .update-card {
-    flex: 1 1 calc(50% - 0.5rem);
+    flex: 0 0 calc(50% - 0.5rem);
     background: #222;
     padding: 1rem;
     border: 1px solid #444;
@@ -243,6 +253,7 @@ legend {
     font-size: 1rem;
     color: #ccc;
     margin: 0 0 0.5rem 0;
+    text-align: left;
 }
 
 .update-title {
@@ -250,16 +261,10 @@ legend {
     color: #ff7f00;
     margin: 0 0 0.5rem 0;
     font-weight: 700;
-    text-align: center;
 }
 
 .update-description {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     color: #fff;
     margin: 0;
-}
-
-#all-updates-container h2{
-    margin: 2rem 0 0 0;
-    text-align: center;
 }
