--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ legend {
 
 #latest-updates-background {
     margin-top: 1rem;
+    padding-bottom: 2rem;
     background-color: #2a2a2a;
     text-align: center;
 }
