--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@ body {
 }
 
 p {
-    font-family: 'VT323', monospace;
     font-size: clamp(1rem, 3vw, 1.5rem);
     margin: 0 0 clamp(1rem, 3vw, 2rem) 0;
     text-align: center;
@@ -86,7 +85,7 @@ p {
     justify-content: center;
     gap: clamp(0.5rem, 2vw, 1rem);
     width: 70%;
-
+    font-family: 'VT323', monospace;
     padding: clamp(0.5rem, 2vw, 1rem);
 }
 
@@ -150,6 +149,9 @@ legend {
     text-align: center;
     width: 100%;
 }
+#latest-updates-background h1 {
+    font-family: 'VT323', monospace;
+}
 
 .three-updates-container {
     display: flex;
@@ -175,6 +177,8 @@ legend {
 }
 
 .header, .footer {
+    font-family: 'VT323', monospace;
+    font-size: clamp(1.5rem, 2vw, 1rem);
     width: 100%;
     padding: 1rem 2rem;
     background-color: #1a1a1a;
@@ -221,6 +225,7 @@ legend {
 }
 
 #all-updates-container {
+    font-family: 'VT323', monospace;
     max-width: 1240px;
     width: 100%;
     margin: 0 auto;
